--- a/doc/0.overview.md
+++ b/doc/0.overview.md
@@ -20,10 +20,18 @@
    1. [nuxtjs](5.modern.nuxt.md)
 1. PWA
    1. [Web Worker](6.worker.md)
+   1. Google(manifest.json)
+   1. Microsoft(browserconfig.xml)
+   1. Apple - WIP
 
 
 
 # 参考資料　
+
+PWA
+https://speakerdeck.com/mizchi/jia-su-suruhurontoendotopwa
+https://speakerdeck.com/mizchi/guang-wochao-erutamefalsehurontoendoakitekutiya
+
 
 webpack公式
 https://webpack.js.org/
