(section3) webpack sample.

--- a/doc/3.es6.md
+++ b/doc/3.es6.md
@@ -35,19 +35,15 @@ Chromeは半年前どこまでサポートしていたか？、Edgeは？
 …という悩みを解決するために、Babelがあります。
 
 また、スタイルシートでの同様の悩みを解決するために、postcssがあります。
-
-
-``` bash
-yarn add --dev babel-core babel-loader babel-preset-env postcss postcss-loader autoprefixer
-```
-
 下のファイルをエディタで記述し、実行します。
 
 * [src/index.html](../proj/src/index.html)
+* [src/js/lib2.js](../proj/src/js/lib2.js)
 * [src/js/app3.js](../proj/src/js/app3.js)
 * [webpack.3-1.js](../proj/webpack.3-1.js)
 
 ``` bash
+yarn add --dev babel-core babel-loader babel-preset-env postcss postcss-loader autoprefixer
 npx webpack --config webpack.3-1.js --mode production
 ```
 
@@ -65,10 +61,59 @@ npx webpack --config webpack.3-1.js --mode production
 
 ### 解説
 
-プラグインが作成するようになった [index.html](../proj/public/index.html)を見ると、Webpackが生成したファイルをロードするよう、タグが追記されたHTMLになっていることがわかりますね。
+作成された [index.html](../proj/public/index.html)を見ると、HTMLが参照するCSS、JSのファイル名につけたハッシュ値が異なっています。
+これは生成結果が前回の演習と同一でないための変化です。
 
-さて、自動生成されたファイル名をみると、20桁のコード番号がくわわっています。
-これは、内容の異なるファイルでは別のユニークな値になる番号で、ハッシュと呼びます。
+ハッシュ値に気をつけてCSSファイルを開いてみると、postcss-autoprefixer の効果で、`-webkit-`接頭辞のスタイルと、`-ms-`接頭辞のスタイルが追記されていることが見て取れます。
 
-ハッシュの付与してあるファイルは、Webにアップロードしたときに以前のバージョンが残っていても、すみやかに更新されるようになります。
+さて、 node コマンドで lib2.js の動きを見てみましょう。
 
+``` javascript
+  node
+  require("./src/js/lib2")
+```
+
+``` javascript
+export default {
+^^^^^^
+
+SyntaxError: Unexpected token export
+```
+
+おや？？？
+
+
+### ES6 と node.js
+
+実は、node.js はES6で書かれたスクリプトに完全対応していません。
+たとえば `import`/`export` ではなく `require` でjavascriptのロードを行うのが、node.jsの仕様です。
+
+この章では、ブラウザ上での動作をさせるためにbabelを用いました。同様に、node.jsでの動作をさせるためにbabelを用います。
+下のファイルをエディタで記述し、実行します。
+
+* [webpack.3-2.js](../proj/webpack.3-2.js)
+
+``` bash
+npx webpack --config webpack.3-2.js --mode production
+```
+
+これで、 ファイルが自動生成されます。
+使ったコマンドは`package.json`に記述して、繰り返し実行できるようにしておきます。
+
+``` json
+  "scripts": {
+    "app4": "webpack --config webpack.3-2.js --mode production",
+  }
+```
+``` bash
+  yarn app4
+```
+
+さて、改めて、 `node`コマンドで `lib2.js` の動きを見てみましょう。直接書いた`lib2`ではなく、`webpack.3-2`が出力した`lib2`を読み込みます。
+
+``` javascript
+  node
+  require("./lib/lib2")
+```
+
+今度は、`default`の値として`function`が実行可能になっていることが読み取れます。
