--- a/doc/4.test.md
+++ b/doc/4.test.md
@@ -2,20 +2,21 @@
 
 # Test
 
-``` bash
-yarn add --dev jest
-```
+ES6を使ってコードを書くたびに、ビルドをしなおして動作を確認して、、、とやっていくと、手順が多くて煩わしいことになっていきます。
+ですので、ここで自動テストシステムを導入します。
 
 下のファイルをエディタで記述し、実行します。
 
 * [\_\_tests\_\_/lib1_spec.js](../proj/__tests__/lib1_spec.js)
+* [\_\_tests\_\_/lib2_spec.js](../proj/__tests__/lib2_spec.js)
 * [.babelrc](../proj/.babelrc)
 
 ``` bash
+yarn add --dev jest
 yarn jest
 ```
 
 ### 解説
 
 jestは、数あるテストランナーのうち一つです。
-ここでは、スナップショットテスティングの機能があるのでこれを選びました。
+ここでは、スナップショットテスティングの機能があり、テストケースの記述で楽ができるので、これを選びました。
