--- a/doc/4.test.md
+++ b/doc/4.test.md
@@ -16,7 +16,19 @@ yarn add --dev jest
 yarn jest
 ```
 
+実行すると、テストの成功、失敗、処理時間が表示され、下記のスナップショットファイルが生成されます。
+
+* [\_\_tests\_\_/\_\_snapshots\_\_/lib1_spec.js.snap](../proj/__tests__/__snapshots__/lib1_spec.js.snap)
+* [\_\_tests\_\_/\_\_snapshots\_\_/lib2_spec.js.snap](../proj/__tests__/__snapshots__/lib2_spec.js.snap)
+
+
 ### 解説
 
 jestは、数あるテストランナーのうち一つです。
 ここでは、スナップショットテスティングの機能があり、テストケースの記述で楽ができるので、これを選びました。
+
+この方法では、初回のテスト結果がスナップショットとして残されます。
+次のテスト以降は、スナップショットファイルとテストの実行結果を比較して、違いが発生したテストはfailとして扱われます。
+
+いちどスナップショットをとった仕様を変更する場合は、スナップショットを削除して作成しなおすか、`` yarn jest -u ``オプションを使い、スナップショット上書き動作を行います。
+
