--- a/doc/4.test.md
+++ b/doc/4.test.md
@@ -2,7 +2,7 @@
 
 # Test
 
-ES6を使ってコードを書くたびに、ビルドをしなおして動作を確認して、、、とやっていくと、手順が多くて煩わしいことになっていきます。
+ES6を使ってコードを書くたびに、ビルドをしなおして動作を確認して、、、とやっていくと、手順が多くて煩わしいことになっていきます。
 ですので、ここで自動テストシステムを導入します。
 
 下のファイルをエディタで記述し、実行します。
@@ -18,7 +18,7 @@ yarn jest
 
 実行すると、テストの成功、失敗、処理時間が表示され、下記のスナップショットファイルが生成されます。
 
-* [\_\_tests\_\_/\_\_snapshots\_\_/lib1_spec.js.snap](../proj/__tests__/__snapshots__/lib1_spec.js.snap)
+* [\_\_tests\_\_/\_\_snapshots\_\_/lib1_spec.js.snap](../proj/__tests__/__snapshots__/lib1_spec.js.snap)
 * [\_\_tests\_\_/\_\_snapshots\_\_/lib2_spec.js.snap](../proj/__tests__/__snapshots__/lib2_spec.js.snap)
 
 
@@ -27,8 +27,8 @@ yarn jest
 jestは、数あるテストランナーのうち一つです。
 ここでは、スナップショットテスティングの機能があり、テストケースの記述で楽ができるので、これを選びました。
 
-この方法では、初回のテスト結果がスナップショットとして残されます。
-次のテスト以降は、スナップショットファイルとテストの実行結果を比較して、違いが発生したテストはfailとして扱われます。
+この方法では、初回のテスト結果がスナップショットとして残されます。
+次のテスト以降は、スナップショットファイルとテストの実行結果を比較して、違いが発生したテストはfailとして扱われます。
 
-いちどスナップショットをとった仕様を変更する場合は、スナップショットを削除して作成しなおすか、`` yarn jest -u ``オプションを使い、スナップショット上書き動作を行います。
+いちどスナップショットをとった仕様を変更する場合は、スナップショットを削除して作成しなおすか、`` yarn jest -u ``オプションを使い、スナップショット上書き動作を行います。
 
