--- a/doc/5.modern.nuxt.md
+++ b/doc/5.modern.nuxt.md
@@ -6,14 +6,15 @@
 npm install -g create-nuxt-app
 npx create-nuxt-app nuxt
 cd nuxt
-yarn add --dev sass-loader node-sass jest @vue/test-utils vue-test-utils vue-jest babel-loader babel-preset-vue-app
+yarn add --dev sass-loader node-sass jest jest-vue-preprocessor @vue/test-utils vue-test-utils vue-jest babel-jest babel-loader babel-preset-vue-app
 npx jest --init
 ```
 
 下のファイルをエディタで記述し、実行します。
 
-* [\_\_tests\_\_/index.test.js](../nuxt/__tests__/index.test.js)
+* [\_\_tests\_\_/index_spec.js](../nuxt/__tests__/index_spec.js)
 * [jest.config.js](../nuxt/jest.config.js)
+* [package.json](../nuxt/package.json)
 * [.babelrc](../nuxt/.babelrc)
 
 ``` bash
