番外編を下に。

--- a/doc/0.overview.md
+++ b/doc/0.overview.md
@@ -16,20 +16,6 @@
    1. jest
    1. jest toWatchSnapshot
 
-
-# Overview（番外編）
-
-1. Modern Framework
-   1. [nextjs](5.modern.next.md)
-   1. [nuxtjs](5.modern.nuxt.md)
-1. PWA
-   1. [Web Worker](6.worker.md)
-   1. Google(manifest.json)
-   1. Microsoft(browserconfig.xml)
-   1. Apple - WIP
-
-
-
 # 参考資料　
 
 PWA
@@ -47,3 +33,14 @@ http://sass-compatibility.github.io/
 railsから。
 https://github.com/rails/webpacker
 
+
+# 番外編
+
+1. Modern Framework
+   1. [nextjs](5.modern.next.md)
+   1. [nuxtjs](5.modern.nuxt.md)
+1. PWA
+   1. [Web Worker](6.worker.md)
+   1. Google(manifest.json)
+   1. Microsoft(browserconfig.xml)
+   1. Apple - WIP
