--- a/doc/5.modern.nuxt.md
+++ b/doc/5.modern.nuxt.md
@@ -6,7 +6,8 @@
 npm install -g create-nuxt-app
 npx create-nuxt-app nuxt
 cd nuxt
-yarn add --dev sass-loader node-sass jest jest-vue-preprocessor @vue/test-utils vue-test-utils vue-jest babel-jest babel-loader babel-preset-vue-app
+yarn add nuxt
+yarn add --dev @babel/core @babel/plugin-transform-runtime @babel/preset-env @vue/test-utils babel-core babel-jest cross-env jest vue-jest jsdom jsdom-global
 npx jest --init
 ```
 
@@ -15,7 +16,6 @@ npx jest --init
 * [\_\_tests\_\_/index_spec.js](../nuxt/__tests__/index_spec.js)
 * [jest.config.js](../nuxt/jest.config.js)
 * [package.json](../nuxt/package.json)
-* [.babelrc](../nuxt/.babelrc)
 
 ``` bash
 yarn jest
