--- a/doc/1.nuxt.md
+++ b/doc/1.nuxt.md
@@ -1,25 +1,63 @@
-[≪戻る](0.overview.md)
+[≪ 戻る](0.overview.md)
 
 # Nuxt.js
 
-``` bash
+Nuxt.js は、VueJS に基づいてつくられたフレームワークです。
+主な特徴としては、
+
+1. コンポーネント単位での管理
+1. 宣言的な記述
+1. シングルページアプリケーション
+1. 自動的なルーティング
+
+あたりが挙げられます。
+
+## 導入
+
+```bash
 npm install -g create-nuxt-app
 npx create-nuxt-app nuxt
+  # いくつか質問に答えます。 None / Bootsrap / spa / ...
 cd nuxt
-npx jest --init
 ```
 
-下のファイルをエディタで記述し、実行します。
+下のファイルをエディタで書き換え、またコマンドを実行します。
 
-* [\_\_tests\_\_/index_spec.js](../nuxt/__tests__/index_spec.js)
-* [jest.config.js](../nuxt/jest.config.js)
-* [package.json](../nuxt/package.json)
+- [tsconfig.json](../nuxt/tsconfig.json)
+- [package.json](../nuxt/package.json)
 
-``` bash
-yarn jest
+```bash
+yarn install
+yarn dev
 ```
 
-### 解説
+ブラウザで http://localhost:3000/ を開くと、ロゴマークが見えるはずです。
 
-nuxtjsは、VueJSでSPAを作るためのフレームワークです。
-フレームワークを利用すると、ファイルの配置、設定の調整など、手間のかかる作業を省くことができます。
+## 自動テスト
+
+下のファイルをエディタで書き換え、コマンドを実行します。
+
+- [jest.config.js](../nuxt/jest.config.js)
+- [test/Logo.spec.ts](../nuxt/test/Logo.spec.ts)
+
+```bash
+yarn test
+```
+
+Logo.spec.js に記述したふたつのテスト項目を自動実行し、2 件ともパスします。
+また、この時、toMatchSnapshot 　をおこなった expect についてスナップショットが記録されています。
+これは次のテスト時に新規取得スナップショットと比較、変更点がある場合についてテスト NG となります。
+
+## TypeScript
+
+下のファイルをエディタで書き換え、コマンドを実行します。
+
+- [components/HelloWorld.vue](../nuxt/components/HelloWorld.vue)
+- [pages/index.vue](../nuxt/pages/index.vue)
+
+```bash
+yarn dev
+```
+
+画面に大きく、Hello World!という言葉が追加されました。
+ここで HelloWorld.vue は、HTML+TypeScript で記述しました。
