--- a/doc/1.nuxt.md
+++ b/doc/1.nuxt.md
@@ -32,9 +32,12 @@ yarn dev
 ```
 
 ブラウザで http://localhost:3000/ を開くと、ロゴマークが見えるはずです。
+ここから、いくつかのページをもつ動的なサイトを、nuxt.jsで作成していきたいと思います。
+
 
 ## 自動テスト
 
+作り進めていくまえに、最初にテストの設定をします。
 下のファイルをエディタで書き換え、コマンドを実行します。
 
 - [jest.config.js](../nuxt/jest.config.js)
@@ -45,19 +48,29 @@ yarn test
 ```
 
 Logo.spec.js に記述したふたつのテスト項目を自動実行し、2 件ともパスします。
-また、この時、toMatchSnapshot 　をおこなった expect についてスナップショットが記録されています。
-これは次のテスト時に新規取得スナップショットと比較、変更点がある場合についてテスト NG となります。
+ここでは `toMatchSnapshot` のテスト項目を実行しました。
+これは、前回テスト時に自動的にスナップショットを保管しておき、次回テスト時にスナップショットと比較を行うテストです。相違がある場合テストNGとなります。
+仕様が変わって異なるスナップショットが正しくなる場合は、スナップショットを更新して保管します。
+
+(VirtualDOMなどの）大きなデータ構造をテストしたい時に便利です。
 
 ## TypeScript
 
-下のファイルをエディタで書き換え、コマンドを実行します。
+### index
+
+コマンドを実行し、ブラウザで http://localhost:3000 を開きます。
+
+そのまま下のファイルをエディタで書き換えると、修正を検知してページが書き換わります。
 
 - [components/HelloWorld.vue](../nuxt/components/HelloWorld.vue)
 - [pages/index.vue](../nuxt/pages/index.vue)
 
-```bash
-yarn dev
-```
-
-画面に大きく、Hello World!という言葉が追加されました。
+画面に大きく、Hello World!という言葉が追加されましたね。
 ここで HelloWorld.vue は、HTML+TypeScript で記述しました。
+
+### sample
+
+つぎに、下のファイルをエディタで書き換えます。indexページに用意した「Sample Vue」ボタンを押してリンク先に行くと、書道のアニメーション表示になります。
+
+- [pages/sample.vue](../nuxt/pages/sample.vue)
+
